syntax = "proto3";
option java_package = "cat.durban.sergio.flutter_meta_appads_sdk.proto";

enum FBStandardEvents {
  AdClick = 0;
  AdImpression = 1;
  CompletedRegistration = 2;
  CompletedTutorial = 3;
  Contact = 4;
  CustomizeProduct = 5;
  Donate = 6;
  FindLocation = 7;
  Rated = 8;
  Schedule = 9;
  Searched = 10;
  StartTrial = 11;
  SubmitApplication = 12;
  Subscribe = 13;
  ViewedContent = 14;
  AddedPaymentInfo = 15;
  AddedToCart = 16;
  AddedToWishlist = 17;
  InitiatedCheckout = 18;
  Purchased = 19;
  AchievedLevel = 20;
  UnlockedAchievement = 21;
  SpentCredits = 22;
}

enum FBStandardParameters {
  ParameterNameContent = 0;
  ParameterNameContentID = 1;
  ParameterNameContentType = 2;
  ParameterNameCurrency = 3;
  ParameterNameDescription = 4;
  ParameterNameLevel = 5;
  ParameterNameMaxRatingValue = 6;
  ParameterNameNumItems = 7;
  ParameterNamePaymentInfoAvailable = 8;
  ParameterNameRegistrationMethod = 9;
  ParameterNameSearchString = 10;
  ParameterNameSuccess = 11;
  ParameterNameAdType = 12;
  ParameterNameOrderID = 13;
  ParameterNameEventName = 14;
  ParameterNameLogTime = 15;
}

message FBLogStandardEventMessageRequest {
  FBStandardEvents eventName = 1;
  repeated FBDefaultParameter eventParameter = 2;
}

message FBDefaultParameter {
  FBStandardParameters parameterName = 1;
  string value = 2;
}